@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.874 - Adjusted midaction and pet_midaction.
+-------------------------------------------------
 GearSwap 0.873 - Adjusted midaction and pet_midaction.
 -------------------------------------------------
 GearSwap 0.872 - Fixed Encumbrance, Job Change issues, and a nil error on login.
